Fix: Switch to column when on item page and on small screens (mobile)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -739,7 +739,7 @@ input {
   .shop__filters__title__text {
     font-size: 20px;
   }
-  .product {
+  .item {
     flex-direction: column;
   }
   .item__mini-image-choice {
